tests/samples/negative/modules/const_mangle_abi_collision.ax
module const_mangle_abi_collision;

import const_mangle_collision.a.b_c as left;
import const_mangle_collision.a_b.c as right;

fn main() -> i32 {
  return left.VALUE + right.VALUE;
}
